tests/errors/type_mismatch_modulo.dang
# Test modulo type mismatch
let result = "hello" % 42
